--- a/core/dplugins/dimg/README
+++ b/core/dplugins/dimg/README
@@ -12,9 +12,9 @@ JPEG2K  Done  Done   Done  Done      N.A     yes      yes     libjasper
 HEIF    Done  Done   Done  Done      N.A     yes      yes     libheif / libde265 (internal) + libx265 (external)
 
 Others file formats are supported:
-- in 8 bits/color/pixel only using Qt plugin loaders (QImage and KImageFormat plugins - "KIMG") and mostly in read only.
+- in 8 or 16 bits/color/pixel only using Qt plugin loaders (QImage and KImageFormat plugins - "KIMG") and mostly in read only.
   https://doc.qt.io/qt-5/qimage.html#reading-and-writing-image-files
-  https://cgit.kde.org/kimageformats.git/tree/src/imageformats
+  https://invent.kde.org/frameworks/kimageformats
 
 - in 8 or 16 bits/color/pixel using ImageMagick codecs (optional - "IM").
   https://www.imagemagick.org/script/formats.php
@@ -29,6 +29,9 @@ Format   Read       Write      Description                              Codec
 KRA      yes        no         Krita Raster image                       KIMG
 ORA      yes        no         OpenRaster image                         KIMG
 PIC      yes        no         Softimage Raster image                   KIMG
+ANI      yes        no         Windows Animated Cursor                  KIMG
+PIC      yes        yes        PCPaint image format                     KIMG
+AVIF     yes        yes        AV1 Image File Format                    KIMG | IM
 DDS      yes        yes        Microsoft Direct Draw Surface            KIMG | IM
 EPS      yes        yes        Adobe Encapsulated PostScript            KIMG | IM
 EXR      yes        yes        ILM High dynamic range image             KIMG | IM
@@ -48,6 +51,7 @@ PGM      yes        yes        Portable graymap format                  KIMG | I
 PPM      yes        yes        Portable pixmap format                   KIMG | IM
 XBM      yes        yes        X Windows system bitmap                  KIMG | IM
 XPM      yes        yes        X Windows system pixmap                  KIMG | IM
+JXL      yes        yes        JPEG Extended Long-term                  KIMG | IM
 PCD      yes        yes        PhotoCD                                         IM
 SGI      yes        yes        Irix RGB image                                  IM
 ICO      yes        no         Windows icon format                             IM
@@ -57,12 +61,8 @@ WEBP     yes        yes        Weppy image format                              I
 FIT/FITS yes        yes        Flexible Image Transport System                 IM
 FLIF     yes        yes        Free Lossless Image Format                      IM
 JBIG     yes        yes        Joint Bi-level Image                            IM
-BPG                            Better Portable Graphics
+BPG      yes        yes        Better Portable Graphics                        IM
+DJVU     yes        no         Deja-Vu                                         IM
+JXR      yes        yes        JPEG Extended Range                             IM
 -----------------------------------------------------------------------------------
 
-TODO :
-
-Remove Jasper dependency and replace by OpenJpeg http://www.openjpeg.org
-Add AV1 plugin based on libaom (https://aomedia.googlesource.com/aom/)
-Add JPEG-XR plugin based on libjxr (https://github.com/4creators/jxrlib)
-Add WebP plugin based on libwebp (https://github.com/webmproject/libwebp)
