--- a/NEWS
+++ b/NEWS
@@ -200,7 +200,7 @@ BUGFIXES:
 189 ==> 271618 - digiKam crashes on start up.
 190 ==> 447638 - After applying reverse geo coding those tags are not being saved into the file automatically.
 191 ==> 359083 - digiKam doesn't read JPG XMP data written by Lightroom.
-192 ==> 
+192 ==> 301484 - Synchronize metadata with files produced from external raw converter.
 193 ==> 
 194 ==> 
 195 ==> 
