--- a/NEWS
+++ b/NEWS
@@ -201,12 +201,12 @@ BUGFIXES:
 190 ==> 447638 - After applying reverse geo coding those tags are not being saved into the file automatically.
 191 ==> 359083 - digiKam doesn't read JPG XMP data written by Lightroom.
 192 ==> 301484 - Synchronize metadata with files produced from external raw converter.
-193 ==> 
-194 ==> 
-195 ==> 
-196 ==> 
-197 ==> 
-198 ==> 
+193 ==> 151712 - Adjust Exif orientation tag - wrong permission interpretation.
+194 ==> 150609 - Adjust Exif orientation tag changes files date.
+195 ==> 128309 - Editing Exif rotation info.
+196 ==> 092017 - Huge performance impact of EXIF based thumbnail rotation.
+197 ==> 131384 - Wish: EXIF based rotation of images AFTER transfer.
+198 ==> 088170 - Correct exif orientation tag only work on 1st image of selection.
 199 ==> 
 200 ==> 
 201 ==> 
