--- a/NEWS
+++ b/NEWS
@@ -367,7 +367,7 @@ BUGFIXES:
 355 ==> 293591 - Ubuntu 64 Bit digiKam crashed when clicking on Configure.
 356 ==> 146868 - Support for 'remote' storage systems.
 357 ==> 283480 - digiKam crash in setup.
-358 ==> 
+358 ==> 448793 - Tag shortcuts behavior not consistent when multiple photos are selected with some already containing tag.
 359 ==> 
 360 ==> 
 361 ==> 
