--- a/NEWS
+++ b/NEWS
@@ -379,7 +379,7 @@ BUGFIXES:
 367 ==> 206778 - digiKam crash on launch.
 368 ==> 207889 - It has crashed, when I try to pick up picture to send it.
 369 ==> 218061 - Crash while browsing pictures.
-370 ==> 
+370 ==> 302558 - Allow thinner sidebars.
 371 ==> 
 372 ==> 
 373 ==> 
