--- a/NEWS
+++ b/NEWS
@@ -427,7 +427,7 @@ BUGFIXES:
 416 ==> 247940 - digiKam "spontaneous" crash.
 417 ==> 131269 - Thumbnails aren't saved / cached; Thumbnails aren't auto-generated.
 418 ==> O88807 - digiKam: thumbnail stored in gdbm do not honour exif rotation info.
-419 ==> 
+419 ==> 443863 - digiKam crash on rating image.
 420 ==> 
 421 ==> 
 422 ==> 
